# mayuanjiuzi_guihuashu

./: .env  .gitignore  PRD.md  README.md  api_client.py  clean_md.py  export_result.py  gemini_client.py  main.py  ocr_pdf.py  pyproject.toml  result.csv  result.jsonl  test.py  trim_pdf.py
mds/: 100分 planbook__曹安帛.md  100分 planbook__黄沐予.md  40分 planbook__梁慈垣.md  40分 planbook__胡知远.md  60分 planbook__吴子乐.md  60分 planbook__程潇毅.md  60分 planbook__蔡沐洁.md  60分 planbook__谷云汐.md  60分 planbook__贺蕾妍.md  60分 planbook__赵芸卿.md  70分 planbook__Allison.md  70分 planbook__Loren.md  70分 planbook__Tianning Zhao.md  70分 planbook__应噹噹.md  70分 planbook__李易萱.md  80分 planbook__Melinda.md  80分 planbook__荣天健.md  80分 planbook__董源彦.md  90分 planbook__Yvonne Chen.md  90分 planbook__刘蕙瑜.md  90分 planbook__徐振铭.md  张芯茹.md
prompts/: prompt_mayuan_0108_1.txt  prompt_mayuan_0108_2.txt  prompt_mayuan_3a.txt  prompt_mayuan_3b.txt  prompt_mayuan_4.txt  prompt_mayuan_5a.txt  prompt_mayuan_5b.txt  prompt_mayuan_5c.txt  prompt_mayuan_5d.txt  prompt_mayuan_6.txt  prompt_mayuan_7_1a.txt  prompt_mayuan_7_1b.txt  prompt_mayuan_7_2a.txt  prompt_mayuan_7_2b.txt  prompt_v1.txt  prompt_v2.txt  prompt_v3.txt
results/: result_20260115_140036.json  result_20260115_142528.json  result_20260115_150746.json  result_20260115_152227.json  result_20260115_160514.json  result_20260115_182600.json  result_20260120_004026.json  result_20260122_010840.json  result_20260122_125101.json  result_20260122_144634.json  result_20260122_152836.json  result_20260122_195940.json  result_20260123_135942.json  result_20260123_200611.json  (+1 more)
(+364 files in other folders)
