[project]
name = "mayuanjiuzi-guihuashu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "tesseract>=0.1.3",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]

[tool.uv.workspace]
members = [
    "streamlit_app",
]
